src/test/ui/block-result/unexpected-return-on-unit.stderr
error[E0308]: mismatched types
  --> $DIR/unexpected-return-on-unit.rs:19:5
   |
19 |     foo()
   |     ^^^^^ expected (), found usize
   |
   = note: expected type `()`
              found type `usize`

error: aborting due to previous error(s)

